fix overflow with page transition

--- a/Layout.css
+++ b/Layout.css
@@ -1,4 +1,4 @@
 html {
   /* scroll-behavior: smooth; */
-  overflow-x: hidden;
+  /* overflow-x: clip; */
 }
